# fastwispr

./: .gitignore  AGENTS.md  CODEX_PROMPT.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: mvp-ui-brief.md  product-brief.md  windows-dev-access.md
scripts/windows/: build.ps1  install-startup-shortcut.ps1  setup.ps1  start-dev-runner.ps1  start-ui.ps1  uninstall-startup-shortcut.ps1
src/fastwispr/: __init__.py  __main__.py  app.py  audio_stats.py  backup.py  cli.py  config.py  config_edit.py  controller.py  db.py  dev_runner.py  logging_setup.py  pipeline.py  polish.py  single_instance.py  stt.py
src/fastwispr/windows/: __init__.py  audio.py  hold_to_talk.py  hotkeys.py  injector.py  mouse_buttons.py  overlay.py  settings_ui.py  sounds.py  tray.py
tests/: test_audio_levels.py  test_audio_stats.py  test_backup.py  test_cli_entrypoint.py  test_config_db.py  test_controller.py  test_hold_to_talk.py  test_hotkeys.py  test_logging_setup.py  test_mouse_buttons.py  test_overlay.py  test_pipeline.py  test_settings_ui.py  test_single_instance.py  test_stt.py  test_windows_audio.py  test_windows_injector.py  test_windows_sounds.py  test_windows_startup_scripts.py  test_windows_tray.py
